fixed spacing home page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .p-profile img{
-    margin-top:750px;
+    margin-top:650px;
     height: 450px;
     width: 100%;
     background-size: cover;
